# biomcmc-lib

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  README_algorithms.md  README_references.md  aclocal.m4  biomcmc.h  config.h.in~  configure  configure.ac  empirical_frequency.h  nexus_common.c  prob_distribution.c  prob_distribution.h  prob_distribution_aux.c  random_number.h  super_sptree.c  super_sptree.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doxygen/: biomcmclib.doxy  index.md  random_number_generation.txt
doxygen/html/: ____primes__unused_8h_source.html  __header_8h_source.html  alignment_8h.html  alignment_8h__dep__incl.map  alignment_8h__dep__incl.md5  alignment_8h__incl.map  alignment_8h__incl.md5  alignment_8h_source.html  annotated.html  argtable3_8h_source.html  biomcmc_8h.html  biomcmc_8h__incl.map  biomcmc_8h__incl.md5  biomcmc_8h_source.html  bipartition_8h.html  bipartition_8h__dep__incl.map  bipartition_8h__dep__incl.md5  bipartition_8h__incl.map  bipartition_8h__incl.md5  bipartition_8h_source.html  char__vector_8c.html  char__vector_8c__incl.map  char__vector_8c__incl.md5  char__vector_8h.html  char__vector_8h__dep__incl.map  char__vector_8h__dep__incl.md5  char__vector_8h__incl.map  char__vector_8h__incl.md5  char__vector_8h_source.html  classes.html  clustering__goptics_8h.html  clustering__goptics_8h__dep__incl.map  clustering__goptics_8h__dep__incl.md5  clustering__goptics_8h__incl.map  clustering__goptics_8h__incl.md5  clustering__goptics_8h_source.html  dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9.html  (+327 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  files_1.js  files_2.js  (+54 more)
doxygen/latex/: alignment_8h.tex  alignment_8h__dep__incl.md5  alignment_8h__incl.md5  annotated.tex  biomcmc_8h.tex  biomcmc_8h__incl.md5  bipartition_8h.tex  bipartition_8h__dep__incl.md5  bipartition_8h__incl.md5  char__vector_8c.tex  char__vector_8c__incl.md5  char__vector_8h.tex  char__vector_8h__dep__incl.md5  char__vector_8h__incl.md5  clustering__goptics_8h.tex  clustering__goptics_8h__dep__incl.md5  clustering__goptics_8h__incl.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  distance__generator_8h.tex  distance__generator_8h__dep__incl.md5  distance__generator_8h__incl.md5  distance__matrix_8h.tex  distance__matrix_8h__dep__incl.md5  distance__matrix_8h__incl.md5  empirical__frequency_8c.tex  empirical__frequency_8c__incl.md5  empirical__frequency_8h.tex  empirical__frequency_8h__dep__incl.md5  empirical__frequency_8h__incl.md5  files.tex  genetree_8h.tex  genetree_8h__dep__incl.md5  genetree_8h__incl.md5  hashfunctions_8h.tex  hashfunctions_8h__dep__incl.md5  hashfunctions_8h__incl.md5  hashtable_8h.tex  hashtable_8h__dep__incl.md5  (+162 more)
extra/: random_primes001.tbl.xz
lib/: .bipartition.c.swp  .distance_matrix.h.swp  .rolling_hash.h.swp  .topology_space.c.swp  2  Makefile.am  Makefile.in  __primes_unused.h  _header.h  _unused.c  alignment.c  alignment.h  argtable3.c  argtable3.h  biomcmc.h  bipartition.c  bipartition.h  branchlength.c  char_vector.c  char_vector.h  clustering_goptics.c  clustering_goptics.h  config.h.in  config.h.in~  constant_random_lists.c  constant_random_lists.h  distance_generator.c  distance_generator.h  distance_matrix.c  distance_matrix.h  edlib.cpp  edlib.h  empirical_frequency.c  empirical_frequency.h  file_compression.c  file_compression.h  fortune_cookies.c  fortune_cookies.h  genetree.c  genetree.h  (+66 more)
tests/: Makefile.am  Makefile.in  check_minhash.c  check_money.c  check_suffix_tree.c  check_topology.c  check_unit.c  debug_compression.c  debug_gff3.c  debug_hash.c  debug_minhash.c  debug_rng.c  debug_topology.c
tests/files/: bacteria_riboprot.fasta  iqtree.names  iqtree.nwk  multifurcation.nwk  o  ortho.nwk  pairwise.txt
